--- a/order-service.yml
+++ b/order-service.yml
@@ -6,7 +6,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
 eureka:
   client:
     register-with-eureka: true
